tests/paczka1/fuzzy1/45704547.err
Error in line 6: 6qtihS36SZN A121 24,3
Error in line 5: soFVC S838 32,1
Error in line 10: soFVC A121 0,4
Error in line 13: boef S240 40,8
Error in line 12: iO0i S240 94,0
